--- a/projects.yaml
+++ b/projects.yaml
@@ -261,6 +261,11 @@ projects:
     android_url: https://f-droid.org/en/packages/org.lufebe16.pysolfc/
     desc: Highly-portable collection of solitaire card games.
     tags: ["games", "kivy", "tk", "linux", "windows", "android"]
+  - name: Lutris
+    repo_url: https://github.com/lutris/lutris
+    home_url: https://lutris.net/
+    desc: Gaming platform for GNU/Linux, managing game installations with a unified interface.
+    tags: ["games", "gtk", "linux"]
 
 ## Productivity
   - name: Autokey
