--- a/projects.yaml
+++ b/projects.yaml
@@ -1116,6 +1116,11 @@ projects:
     docs_url: http://ergonomica.readthedocs.io/
     desc: Cross-platform shell language based on [S-expressions](https://en.wikipedia.org/wiki/S-expression) combined with traditional shell features.
     tags: ["shell", "linux", "windows", "mac"]
+  - name: PathPicker
+    repo_url: https://github.com/facebook/PathPicker
+    home_url: http://facebook.github.io/PathPicker/
+    desc: Shell utility to pick paths from the output of other commands
+    tags: ["shell", "linux", "mac"]
 
 ## Ops
   - name: OpenStack
