--- a/projects.yaml
+++ b/projects.yaml
@@ -681,6 +681,11 @@ projects:
     home_url: https://ckan.org/
     desc: Data management system (DMS) which makes it easy to publish, share, and use data. Data hubs powered by CKAN include [datahub.io](https://datahub.io), [catalog.data.gov](https://catalog.data.gov), and [europeandataportal.eu](https://europeandataportal.eu/data/en/dataset), among many other sites.
     tags: ["science", "server", "flask"]
+  - name: Manim
+    repo_url: https://github.com/3b1b/manim
+    docs_url: https://manim.readthedocs.io
+    desc: Animation engine for explanatory math videos, primarily designed for [works by 3blue1brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw).
+    tags: ["science", "linux"]
 
 ## Static Site Generators
 
