--- a/projects.yaml
+++ b/projects.yaml
@@ -857,6 +857,11 @@ projects:
     home_url: http://facebook.github.io/PathPicker/
     desc: Shell utility to interactively select paths from the output of other commands
     tags: ["dev", "linux", "mac"]
+  - name: asciinema
+    repo_url: https://github.com/asciinema/asciinema
+    home_url: https://asciinema.org/
+    desc: Terminal session recorder and replayer.
+    tags: ["dev", "linux", "mac"]
 
 ## Editors
   - name: Spyder IDE
